ignore ipynb files!

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
+# Miscellaneous #
+#################
+reinstall_murraylab_tools.sh
+just_reinstall_murraylab_tools.sh
+
+.ipynb_checkpoints
+*-checkpoint.ipynb
+
+build/*
+dist/*
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
